src_old/objects/ProjectInvoiceLineItemDetail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Invoice Line Items Detail</relationshipLabel>
        <relationshipName>Project_Invoice_Line_Items_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingStatus__c</fullName>
        <label>Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>NotBillable</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
                <value>
                    <fullName>Disputed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargeEntryTypeAmount__c</fullName>
        <formula>IF(ISPICKVAL( EntryType__c , &apos;Charge&apos;), RateCalculated__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Entry Type Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditEntryTypeAmount__c</fullName>
        <formula>IF(ISPICKVAL( EntryType__c , &apos;Credit&apos;), RateCalculated__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Entry Type Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntryType__c</fullName>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LaborTaxLawsonID__c</fullName>
        <label>Labor Tax Lawson ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaborTaxRate__c</fullName>
        <label>Labor Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationNumber__c</fullName>
        <description>This field can be populated when there is no project location info available.</description>
        <label>Location Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentEntryTypeAmount__c</fullName>
        <formula>IF(ISPICKVAL( EntryType__c , &apos;Payment&apos;), RateCalculated__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Entry Type Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>CASESAFEID(ProjectInvoiceLineItem__r.ProjectInvoice__r.Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectInvoiceLineItem__c</fullName>
        <label>Project Invoice Line Item</label>
        <referenceTo>ProjectInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Project Invoice Line Items Detail</relationshipLabel>
        <relationshipName>Project_Invoice_Line_Items_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectLocationState__c</fullName>
        <formula>TEXT(ProjectLocation__r.Location__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location</label>
        <referenceTo>ProjectLocation__c</referenceTo>
        <relationshipLabel>Project Invoice Line Items Detail</relationshipLabel>
        <relationshipName>Project_Invoice_Line_Items_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RateCalculated__c</fullName>
        <description>This field is to inverse Rate__c for credit and payment entry type</description>
        <formula>(
	Rate__c * 
	(
		IF(
			OR (ISPICKVAL( EntryType__c , &quot;Payment&quot;),ISPICKVAL(EntryType__c , &quot;Credit&quot;)),
			-1,
			1)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesTax__c</fullName>
        <formula>(BLANKVALUE(LaborTaxRate__c,0) * (Rate__c / 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Project Invoice Line Items Detail</relationshipLabel>
        <relationshipName>Project_Invoice_Line_Items_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Invoice Line Item Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PILID-{000000000}</displayFormat>
        <label>Project Invoice Line Item Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Invoice Line Items Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>